# lazrgit

./: .gitignore  README.md  example-config  pyproject.toml
src/lazrgit/: ask_openai.py  commit.py  git.py  internal.py  jira.py
